--- a/gatsby/static/web0.html
+++ b/gatsby/static/web0.html
@@ -23,7 +23,7 @@
     there is a lot of buzz around web2 vs web3. a lot of discussion around ownership and data. these are healthy
     discussions for web professionals to have. for me, tho, web3 seems to be a bunch of librarian grifters trying to
     shoehorn ayn randian solutions as the one true way for decentralization. when i think of decentralization, i think
-    of bitorrent and information freedom, not artificial scarcity and laser eyes.
+    of bittorrent and information freedom, not artificial scarcity and laser eyes.
   </p>
   <p>
     what i can agree with in web3 is ownership of data and the best way to express that is by having a personal site.
