Add images and layout content for Saturdays poem

--- a/src/pages/saturdays/05.html
+++ b/src/pages/saturdays/05.html
@@ -3,14 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/html-energy/2k25.css" />
+    <title>Saturdays</title>
   </head>
   <body>
-    <div class="poem">
-      Yes, it’s enough<br />
-      Nice talking to you<br />
-      Enjoy your chicken rings<br />
-      Goodbye<br />
-    </div>
+    <main>
+      <div class="poem">
+        <div class="poem-content">
+          Yes, it’s enough<br />
+          Nice talking to you<br />
+          Enjoy your chicken rings<br />
+          Goodbye<br />
+        </div>
+      </div>
+      <figure>
+        <img
+          src="/html-energy/chicken-rings.png"
+          alt="White Castle chicken rings, a thing he loves to eat"
+        />
+      </figure>
+    </main>
     <a class="next-page" href="/saturdays">Back</a>
   </body>
 </html>
