--- a/src/pages/saturdays/index.html
+++ b/src/pages/saturdays/index.html
@@ -3,14 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/html-energy/2k25.css" />
+    <title>Saturdays</title>
   </head>
   <body>
-    <h1>Saturdays</h1>
-    <div class="poem">
-      Another “Happy Saturday”<br />
-      It’s you again.<br />
-      Is it Beatles day? Oh that's right, how could I forget<br />
-    </div>
+    <main>
+      <div class="poem">
+        <div class="poem-content">
+          <h1>Saturdays</h1>
+          Another “Happy Saturday”<br />
+          It’s you again!<br />
+          Is it Beatles laundry day? Oh that's right, how could I forget<br />
+        </div>
+      </div>
+      <figure>
+        <img
+          src="/html-energy/beatles-shirt.png"
+          alt="Illustration of balled up Beatles shirt on the floor"
+        />
+      </figure>
+    </main>
     <a class="next-page" href="/saturdays/01.html">Next</a>
   </body>
 </html>
