--- a/src/pages/saturdays/03.html
+++ b/src/pages/saturdays/03.html
@@ -3,13 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/html-energy/2k25.css" />
+    <title>Saturdays</title>
   </head>
   <body>
-    <div class="poem">
-      How did we not find community online?<br />
-      We’re just too in the physical world, I suppose<br />
-      More into knowledge than connections as well<br />
-    </div>
+    <main>
+      <div class="poem">
+        <div class="poem-content">
+          How did we not find community online?<br />
+          We’re just too in the physical world, I suppose<br />
+          More into knowledge than connections as well<br />
+          Just a bunch of dorks
+        </div>
+      </div>
+      <figure>
+        <img
+          src="/html-energy/the-glow.png"
+          alt="Illustration of teenage Eli and Jonathan looking at computers"
+        />
+      </figure>
+    </main>
     <a class="next-page" href="/saturdays/04.html">Next</a>
   </body>
 </html>
