--- a/src/pages/web0.html
+++ b/src/pages/web0.html
@@ -56,10 +56,9 @@
       <li>
         <a href="/saturdays">Saturdays</a>: A poem about the weekly phone calls
         I have with my brother in law for HTML Day 2025. I dislike AI art in
-        general, but I wanted this to have some polish, so I cheated.<br />
-        <br />
-        My wife and I traveled to Poughkeepsie for this event and she wrote her
-        first HTML ever! It is a treasured memory of mine now.
+        general, but I wanted this to have some polish, so I cheated. My wife
+        and I traveled to Poughkeepsie for this event and she wrote her first
+        HTML ever! It is a treasured memory of mine now.
       </li>
       <li>
         <a href="/horses.html">Horses</a>: A poem I made for HTML Day 2024 about
