HTML Energy 2025 Poem (#324)
* Layout content for Saturdays poem

* Add images and layout content for Saturdays poem

* Remove Wikipedia image

* Remove a line break the looked awful

--- a/src/pages/web0.html
+++ b/src/pages/web0.html
@@ -14,7 +14,6 @@
     />
     <style>
       body {
-        text-align: center;
         max-width: 60rem;
         margin: 0 auto;
         font-size: 20px;
@@ -50,5 +49,23 @@
       this page. won't you join me and the web0 movement?
     </p>
     <p>✳️ <a href="https://eligundry.com">Eli Gundry</a> ✳️</p>
+
+    <section></section>
+    <h2>HTML Energy Projects</h2>
+    <ul>
+      <li>
+        <a href="/saturdays">Saturdays</a>: A poem about the weekly phone calls
+        I have with my brother in law for HTML Day 2025. I dislike AI art in
+        general, but I wanted this to have some polish, so I cheated. My wife
+        and I traveled to Poughkeepsie for this event and she wrote her first
+        HTML ever! It is a treasured memory of mine now.
+      </li>
+      <li>
+        <a href="/horses.html">Horses</a>: A poem I made for HTML Day 2024 about
+        my first (web) job working at a horse farm. I remeber them telling me,
+        when they hired me, that the last person they had ended up in NYC and
+        look at me now.
+      </li>
+    </ul>
   </body>
 </html>
